# conventional-versioning

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: conventional-versioning.yml  dependabot.yml
.github/workflows/: main.yml  release.yml
src/: args.rs  conventional.rs  main.rs  output.rs  repo.rs  variant.rs
src/configuration/: args.rs  file.rs  mod.rs  shared.rs
