[package]
name = "conventional-versioning"
version = "0.2.72"
edition = "2021"
description = "CLI tool that suggests the next version for you by analyzing the conventional commit history"
license-file = "./LICENSE"
repository = "https://github.com/jontze/conventional-versioning"
# Avoid publishing to crates.io
publish = ["jontze"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env"] }
git2 = { version = "0.20.1",  default-features = false}
miette = { version = "7.6.0", features = ["fancy"] }
node-semver = "2.2.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.22"

[dev-dependencies]
mockall = "0.13.1"
